# middleware/token.go
@@ -9,11 +9,16 @@ import (
 
 func AuthUserToken() gin.HandlerFunc {
 	return func(c *gin.Context) {
+		// 先在query查询token
 		token, is := c.GetQuery("token")
 		if !is {
-			c.JSON(http.StatusUnauthorized, gin.H{"statusCode": 1, "message": "未登陆！"})
-			c.Abort()
-			return
+			// 如果没找到，则在postForm中找
+			token, is = c.GetPostForm("token")
+			if !is {
+				c.JSON(http.StatusUnauthorized, gin.H{"statusCode": 1, "message": "未登陆！"})
+				c.Abort()
+				return
+			}
 		}
 		id, userAccount, err := jwt.ParseUserToken(token, conf.JWTCfg.SignKey)
 		if err != nil {
